methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:20: error: not found: value c
    setCouleurBrosse(c)
                     ^